[tool.poetry]
name = "poshare"
version = "0.1.0"
description = ""
authors = ["pluto <mayuanchi1029@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
pandas = "^2.0.0"
fake-useragent = "^1.1.3"
beautifulsoup4 = "^4.12.2"
Js2Py = "^0.74"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
types-requests = "^2.28.11.17"
notebook = "^6.5.4"
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
